--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
                 <img src="images/illustrators/illustrator-1.png" alt="">
             </div>
             <div class="text">
-                <h2 class="card-title">HTML & CSS Responsive Web Design</h2>
-                <p>Enterprise-class websites need consistent colors, fonts, and design to match the organization's
-                    branding guidelines. </p>
+                <h2 class="card-title">Responsive Web Design</h2>
+                <p>Enterprise-class websites need consistent colors, fonts, and design. </p>
             </div>
         </div>
         <div class="box" id="box-2">
@@ -90,8 +89,7 @@
             <img src="images/pictures/coding.png" alt="">
         </div>
         <div class="half-width">
-            <h1 class="tittle-2">Discover </h1>
-            <h1 class="tittle-2"> About me</h1>
+            <h1 class="tittle-2">Discover About Me</h1>
             <p>My name is Oishee . I am a front end web developer. I am very passionate and dedicated to my work. I have
                 aquired the skills necessary to build a wonderful website.</p>
             <a href="">Download CV</a>
